Teacher Student Update

--- a/LMS.BusinessLogics/LMS.BusinessLogics.csproj
+++ b/LMS.BusinessLogics/LMS.BusinessLogics.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\LMS.Domain\LMS.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Hosting">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.hosting\2.1.1\lib\netstandard2.0\Microsoft.Extensions.Hosting.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
