--- a/LMS/nlog.config
+++ b/LMS/nlog.config
@@ -6,7 +6,7 @@
   <targets>
     <!-- write logs to file  -->
     <target name="allfile" xsi:type="File"
-            fileName="C:\AppLogs\LMS\nlog-all-${shortdate}.log"/>
+            fileName="C:\LMS\nlog-all-${shortdate}.log"/>
   </targets>
 
   <!-- rules to map from logger name to target -->
