--- a/LMS/LMS.csproj
+++ b/LMS/LMS.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
+    <PackageReference Include="MimeKit" Version="2.9.2" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3" />
   </ItemGroup>
 
@@ -20,6 +21,7 @@
     <Folder Include="Areas\Teachers\Data\" />
     <Folder Include="Areas\Teachers\Models\" />
     <Folder Include="wwwroot\Dashboard\assets\jqueryDataTable\" />
+    <Folder Include="wwwroot\Lectures\" />
   </ItemGroup>
 
   <ItemGroup>
