Adding Student as a User While Adding Student

--- a/LMS/nlog.config
+++ b/LMS/nlog.config
@@ -12,6 +12,6 @@
   <!-- rules to map from logger name to target -->
   <rules>
     <!--All logs, including from Microsoft-->
-    <logger name="*" minlevel="Trace" writeTo="allfile" />
+    <logger name="*" minlevel="Information" writeTo="allfile" />
   </rules>
 </nlog>
