--- a/LMS/LMS.csproj
+++ b/LMS/LMS.csproj
@@ -40,6 +40,9 @@
     <Content Update="nlog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Update="Views\Shared\Components\SPSidebar\SPSidebarVC.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
 
 </Project>
